# WeatherCLIBlocPython

./: .travis.yml  README.md  pyproject.toml
test/: conftest.py  test_weather.py  test_weather_api_client.py  test_weather_bloc.py
tests/data/: example_data.json
weather/: cli.py  ui.py
weather/blocs/: weather_bloc.py  weather_event.py  weather_state.py
weather/models/: weather.py  weather_states.py
weather/repositories/: weather_api_client.py  weather_repository.py
