[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["pen-dev <pelipenkovladislav@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
bloc = {git = "https://github.com/pen-lab/python-bloc.git", rev = "0.1.1"}
typer = "^0.3.2"
aiohttp = "3.7.3"
pydantic = "1.7.3"
asyncclick = "7.1.2.3"

[tool.poetry.dev-dependencies]
pytest = "4.6.11"
pytest-aiohttp = "0.3.0"

[tool.poetry.scripts]
weather = "weather.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
